--- a/app/static/app.css
+++ b/app/static/app.css
@@ -1,4 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400 800;
+  font-display: swap;
+  src: local("Inter");
+}
 
 :root {
   color-scheme: light;
