--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/static/app.css" />
-  <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+  <script src="/static/vendor/htmx.min.js" defer></script>
   <title>{{ title }}</title>
 </head>
 <body>
