Conditionally load htmx from CDN outside Docker

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  {% if not use_local_assets %}
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" />
+  {% endif %}
   <link rel="stylesheet" href="/static/app.css" />
+  {% if use_local_assets %}
   <script src="/static/vendor/htmx.min.js" defer></script>
+  {% else %}
+  <script src="https://unpkg.com/htmx.org@1.9.12" defer></script>
+  {% endif %}
   <title>{{ title }}</title>
 </head>
 <body>
