--- a/app/templates/export.html
+++ b/app/templates/export.html
@@ -17,8 +17,8 @@
     </div>
   </div>
   <div class="card-body">
-    <a class="btn btn-primary" href="/export/bundle.json">Export All (bundle.json)</a>
-    <a class="btn btn-secondary" href="/export/bundle.zip">Export All (bundle.zip)</a>
+    <a class="btn btn-primary" href="/export/bundle.json" data-toast-message="Bundle export started." data-toast-type="info">Export All (bundle.json)</a>
+    <a class="btn btn-secondary" href="/export/bundle.zip" data-toast-message="Bundle export started." data-toast-type="info">Export All (bundle.zip)</a>
   </div>
 </section>
 
@@ -34,29 +34,29 @@
       <div class="export-item">
         <h3>IP Assets</h3>
         <div class="export-actions">
-          <a class="btn btn-secondary" href="/export/ip-assets.csv">CSV</a>
-          <a class="btn btn-secondary" href="/export/ip-assets.json">JSON</a>
+          <a class="btn btn-secondary" href="/export/ip-assets.csv" data-toast-message="IP assets export started." data-toast-type="info">CSV</a>
+          <a class="btn btn-secondary" href="/export/ip-assets.json" data-toast-message="IP assets export started." data-toast-type="info">JSON</a>
         </div>
       </div>
       <div class="export-item">
         <h3>Hosts</h3>
         <div class="export-actions">
-          <a class="btn btn-secondary" href="/export/hosts.csv">CSV</a>
-          <a class="btn btn-secondary" href="/export/hosts.json">JSON</a>
+          <a class="btn btn-secondary" href="/export/hosts.csv" data-toast-message="Hosts export started." data-toast-type="info">CSV</a>
+          <a class="btn btn-secondary" href="/export/hosts.json" data-toast-message="Hosts export started." data-toast-type="info">JSON</a>
         </div>
       </div>
       <div class="export-item">
         <h3>Vendors</h3>
         <div class="export-actions">
-          <a class="btn btn-secondary" href="/export/vendors.csv">CSV</a>
-          <a class="btn btn-secondary" href="/export/vendors.json">JSON</a>
+          <a class="btn btn-secondary" href="/export/vendors.csv" data-toast-message="Vendors export started." data-toast-type="info">CSV</a>
+          <a class="btn btn-secondary" href="/export/vendors.json" data-toast-message="Vendors export started." data-toast-type="info">JSON</a>
         </div>
       </div>
       <div class="export-item">
         <h3>Projects</h3>
         <div class="export-actions">
-          <a class="btn btn-secondary" href="/export/projects.csv">CSV</a>
-          <a class="btn btn-secondary" href="/export/projects.json">JSON</a>
+          <a class="btn btn-secondary" href="/export/projects.csv" data-toast-message="Projects export started." data-toast-type="info">CSV</a>
+          <a class="btn btn-secondary" href="/export/projects.json" data-toast-message="Projects export started." data-toast-type="info">JSON</a>
         </div>
       </div>
     </div>
