--- a/app/templates/partials/ip_assets_table.html
+++ b/app/templates/partials/ip_assets_table.html
@@ -1,7 +1,7 @@
 <section class="card table-card">
   <form class="bulk-edit-form" method="post" action="/ui/ip-assets/bulk-edit" data-bulk-form>
     <input type="hidden" name="return_to" value="{{ return_to }}">
-    <div class="bulk-edit-controls">
+    <div class="bulk-edit-controls bulk-edit-controls-hidden" data-bulk-controls>
       <div class="bulk-edit-selection">
         <label class="field field-inline">
           <input type="checkbox" class="checkbox" data-bulk-select-all aria-label="Select all IP assets">
